--- a/assets/index.css
+++ b/assets/index.css
@@ -10,7 +10,68 @@
   padding: 1rem 2rem;
   margin: 0 auto;
 }
+@media only screen and (min-width: 600px) {
+  .container {
+    width: 100%;
+    max-width: 1280px;
+    padding: 1rem 3rem;
+  }
+}
 
+#mobile-menu {
+  -webkit-backdrop-filter: blur(8px);
+          backdrop-filter: blur(8px);
+  background-color: rgba(255, 255, 255, 0.3);
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  bottom: 0;
+  width: 100vw;
+  right: -100vw;
+  -webkit-transition: ease 0.4s;
+  transition: ease 0.4s;
+  font-size: 1.5rem;
+}
+#mobile-menu .mobile-menu-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  height: 3rem;
+}
+#mobile-menu .mobile-menu-header button {
+  background: none;
+  border: none;
+  padding: 0;
+}
+#mobile-menu ul li {
+  margin-bottom: 1rem;
+}
+#mobile-menu ul li :last-child {
+  margin-bottom: 0;
+}
+
+nav ul {
+  padding: 0;
+}
+nav ul li {
+  list-style-type: none;
+}
+nav ul li a {
+  text-decoration: none;
+  color: #000000;
+}
+
+header .logo {
+  text-transform: uppercase;
+}
+header .menu-button {
+  background: none;
+  border: none;
+  padding: 0;
+}
 header .header-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -18,19 +79,23 @@ header .header-container {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  border-bottom: 3px solid #000000;
   padding: 0.8rem 0;
 }
-header navbar ul {
+header nav ul {
   display: none;
 }
-header navbar ul li {
-  list-style-type: none;
+header nav ul li {
   margin-left: 1rem;
 }
-header navbar ul li a {
-  text-decoration: none;
-  color: #000000;
+@media only screen and (min-width: 600px) {
+  header .header-container {
+    border-bottom: 3px solid #000000;
+  }
+  header nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .section-title {
@@ -39,17 +104,4 @@ header navbar ul li a {
   font-weight: 400;
   font-size: 1rem;
   margin-bottom: 1rem;
-}
-
-@media only screen and (min-width: 600px) {
-  .container {
-    width: 100%;
-    max-width: 1280px;
-    padding: 1rem 3rem;
-  }
-  header navbar ul {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
 }
