--- a/assets/index.css
+++ b/assets/index.css
@@ -100,6 +100,31 @@ header.section-background .header-container {
             transform: translateY(0);
   }
 }
+footer {
+  background-image: url(images/bg.png);
+  color: white;
+  padding: 0.9rem 0;
+  margin-top: 1.5rem;
+  font-size: 0.6rem;
+}
+@media only screen and (min-width: 600px) {
+  footer {
+    font-size: 1rem;
+  }
+}
+
+.footer-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -109,7 +134,8 @@ header.section-background .header-container {
 
 .container {
   width: 100%;
-  padding: 0 2rem;
+  padding-right: 2rem;
+  padding-left: 2rem;
   margin: 0 auto;
 }
 @media only screen and (min-width: 600px) {
