--- a/assets/index.scss
+++ b/assets/index.scss
@@ -1,4 +1,5 @@
 @import "styles/header";
+@import "styles/footer";
 
 * {
   box-sizing: border-box;
@@ -8,7 +9,8 @@
 
 .container {
   width: 100%;
-  padding: 0 2rem;
+  padding-right: 2rem;
+  padding-left: 2rem;
   margin: 0 auto;
 
   @media only screen and (min-width: 600px) {
@@ -20,14 +22,14 @@
 
 #mobile-menu {
   backdrop-filter: blur(8px);
-  background-color: rgba(255, 255, 255, .3);
+  background-color: rgba(255, 255, 255, 0.3);
   position: fixed;
   z-index: 1;
   top: 0;
   bottom: 0;
   width: 100vw;
   right: -100vw;
-  transition: ease .3s;
+  transition: ease 0.3s;
   font-size: 1.5rem;
 
   .mobile-menu-header {
