--- a/assets/index.scss
+++ b/assets/index.scss
@@ -1,5 +1,7 @@
-@import "styles/header";
+@import "styles/colors";
 @import "styles/footer";
+@import "styles/header";
+@import "styles/page-description";
 
 * {
   box-sizing: border-box;
@@ -7,11 +9,17 @@
   font-family: "Poppins", sans-serif;
 }
 
+.text-highlight {
+  color: $primary-color;
+  font-style: italic;
+}
+
 .container {
   width: 100%;
   padding-right: 2rem;
   padding-left: 2rem;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
 
   @media only screen and (min-width: 600px) {
     width: 100%;
