--- a/assets/styles/_sections.scss
+++ b/assets/styles/_sections.scss
@@ -1,4 +1,4 @@
-.page-title {
+.section-title {
   font-size: 1rem;
   text-transform: uppercase;
   font-weight: 400;
@@ -16,7 +16,7 @@
   }
 }
 
-.page-description {
+.section-description {
   font-weight: 500;
   font-size: 1rem;
 
