--- a/assets/index.css
+++ b/assets/index.css
@@ -199,6 +199,25 @@ header.section-background .header-container {
           align-items: center;
 }
 
+.color-white {
+  color: #ffffff;
+}
+
+.contact-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-size: 0.75rem;
+}
+.contact-info span:first-child {
+  color: #1530ec;
+  text-transform: uppercase;
+}
+
 .mt-1 {
   margin-top: 1rem;
 }
