--- a/assets/styles/_shared.scss
+++ b/assets/styles/_shared.scss
@@ -6,3 +6,17 @@
   display: flex;
   align-items: center;
 }
+
+.color-white {
+  color: $white;
+}
+
+.contact-info {
+  display: flex;
+  flex-direction: column;
+  font-size: 0.75rem;
+  span:first-child {
+    color: $primary-color;
+    text-transform: uppercase;
+  }
+}
