--- a/assets/styles/_header.scss
+++ b/assets/styles/_header.scss
@@ -1,96 +1,96 @@
 header {
-    .header-container {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 1rem 0;
+  .header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 0;
 
-        .logo {
-            text-transform: uppercase;
-            font-size: 1.1rem;
-        }
-
-        .menu-button {
-            background: none;
-            border: none;
-            padding: 0;
-
-            img {
-                width: 3rem;
-            }
-        }
+    .logo {
+      text-transform: uppercase;
+      font-size: 1.1rem;
     }
 
-    .header-content {
-        padding-top: 2.3rem;
-        padding-bottom: 3rem;
+    .menu-button {
+      background: none;
+      border: none;
+      padding: 0;
 
-        h1 {
-            font-size: 3.5rem;
-            font-weight: 400;
-            margin-bottom: 2rem;
-        }
+      img {
+        width: 3rem;
+      }
+    }
+  }
 
-        .header-arrow {
-            animation: arrowRepeatingAnimation 2s infinite ease-in-out forwards;
-        }
+  .header-content {
+    padding-top: 2.3rem;
+    padding-bottom: 3rem;
+
+    h1 {
+      font-size: 3.5rem;
+      font-weight: 400;
+      margin-bottom: 2rem;
+    }
+
+    .header-arrow {
+      animation: arrowRepeatingAnimation 2s infinite ease-in-out forwards;
+    }
+  }
+
+  nav {
+    display: none;
+
+    ul {
+      display: flex;
+
+      li {
+        margin-left: 1rem;
+      }
+    }
+  }
+
+  @media only screen and (min-width: 600px) {
+    .header-container {
+      border-bottom: 3px solid #000000;
+
+      .menu-button {
+        display: none;
+      }
     }
 
     nav {
-        display: none;
-
-        ul {
-            display: flex;
-
-            li {
-                margin-left: 1rem;
-            }
-        }
+      display: unset;
     }
 
-    @media only screen and (min-width: 600px) {
-        .header-container {
-            border-bottom: 3px solid #000000;
-
-            .menu-button {
-                display: none;
-            }
-        }
-
-        nav {
-            display: unset;
-        }
-
-        .header-arrow {
-            display: none;
-        }
+    .header-arrow {
+      display: none;
     }
+  }
 }
 
-header.section-background {
-    color: #fff;
+header.background-banner {
+  color: #fff;
 
-    ul {
-        a {
-            color: #fff;
-        }
+  ul {
+    a {
+      color: #fff;
     }
+  }
 
-    .header-container {
-        border-color: #fff;
-    }
+  .header-container {
+    border-color: #fff;
+  }
 }
 
 @keyframes arrowRepeatingAnimation {
-    0% {
-        transform: translateY(0);
-    }
+  0% {
+    transform: translateY(0);
+  }
 
-    50% {
-        transform: translateY(1.25rem);
-    }
+  50% {
+    transform: translateY(1.25rem);
+  }
 
-    100% {
-        transform: translateY(0);
-    }
+  100% {
+    transform: translateY(0);
+  }
 }
