--- a/assets/index.css
+++ b/assets/index.css
@@ -641,6 +641,44 @@ header.background-banner .header-container {
   padding: 10rem;
 }
 
+#mobile-menu {
+  -webkit-backdrop-filter: blur(8px);
+          backdrop-filter: blur(8px);
+  background-color: rgba(255, 255, 255, 0.8);
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  bottom: 0;
+  width: 100vw;
+  right: -100vw;
+  -webkit-transition: ease 0.2s;
+  transition: ease 0.2s;
+  font-size: 1.5rem;
+  padding: 1.5rem;
+}
+#mobile-menu .mobile-menu-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  height: 3rem;
+  margin-bottom: 1rem;
+}
+#mobile-menu .mobile-menu-header button {
+  cursor: pointer;
+  background: none;
+  border: none;
+  padding: 0;
+}
+#mobile-menu ul li {
+  margin-bottom: 1rem;
+}
+#mobile-menu ul li :last-child {
+  margin-bottom: 0;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -651,41 +689,6 @@ header.background-banner .header-container {
 .text-highlight {
   color: #1530ec;
   font-style: italic;
-}
-
-#mobile-menu {
-  -webkit-backdrop-filter: blur(8px);
-          backdrop-filter: blur(8px);
-  background-color: rgba(255, 255, 255, 0.3);
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  bottom: 0;
-  width: 100vw;
-  right: -100vw;
-  -webkit-transition: ease 0.3s;
-  transition: ease 0.3s;
-  font-size: 1.5rem;
-}
-#mobile-menu .mobile-menu-header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: end;
-  height: 3rem;
-}
-#mobile-menu .mobile-menu-header button {
-  background: none;
-  border: none;
-  padding: 0;
-}
-#mobile-menu ul li {
-  margin-bottom: 1rem;
-}
-#mobile-menu ul li :last-child {
-  margin-bottom: 0;
 }
 
 nav ul {
