--- a/assets/styles/_sections.scss
+++ b/assets/styles/_sections.scss
@@ -2,7 +2,6 @@
   font-size: 1rem;
   text-transform: uppercase;
   font-weight: 400;
-  margin-bottom: 1rem;
   display: inline-flex;
   align-items: center;
 
@@ -16,26 +15,28 @@
   }
 }
 
-.section-description {
-  font-weight: 500;
-  font-size: 1rem;
-
-  @media only screen and (min-width: 600px) {
-    font-size: 2rem;
-  }
+.services-section-description {
+  font-size: 2rem;
+  margin: 2rem 0;
 }
 
-.page-description-subtitle {
-  font-size: 0.8rem;
-  font-weight: 200;
-  margin-top: 1rem;
-
-  @media only screen and (min-width: 600px) {
-    font-size: 1.6rem;
-  }
+.services-section-redirect-arrow {
+  width: 2rem;
 }
 
-.page-description-container {
-  padding: 1.5rem 0;
-  margin-bottom: 1rem;
+.restaura-jeans-banner {
+  background-image: url(images/restaura-jeans-banner.png);
+  background-size: cover;
+  height: 220px;
+}
+
+.restaura-jeans-title {
+  font-size: 1.5rem;
+  font-weight: 400;
+  margin: 0;
+  line-height: 2rem;
+
+  img {
+    width: 0.9rem;
+  }
 }
