--- a/assets/styles/_sections.scss
+++ b/assets/styles/_sections.scss
@@ -39,4 +39,13 @@
   img {
     width: 0.9rem;
   }
+
+  @media only screen and (min-width: 600px) {
+    font-size: 3rem;
+    line-height: 4rem;
+
+    img {
+      width: 1.8rem;
+    }
+  }
 }
