--- a/assets/styles/_footer.scss
+++ b/assets/styles/_footer.scss
@@ -4,7 +4,7 @@ footer {
   margin-top: 1.5rem;
   font-size: 0.6rem;
 
-  @media only screen and (min-width: 600px) {
+  @media only screen and (min-width: $mobile-breakpoint) {
     font-size: 1rem;
   }
 }
