--- a/assets/styles/_grid.scss
+++ b/assets/styles/_grid.scss
@@ -2,7 +2,7 @@
   display: grid;
   gap: 1.5rem;
 
-  @media only screen and (min-width: 600px) {
+  @media only screen and (min-width: $mobile-breakpoint) {
     grid-template-columns: 1fr 1fr;
   }
 }
