--- a/assets/styles/_sections.scss
+++ b/assets/styles/_sections.scss
@@ -10,7 +10,7 @@
     margin-right: 0.3rem;
   }
 
-  @media only screen and (min-width: 600px) {
+  @media only screen and (min-width: $mobile-breakpoint) {
     font-size: 1.25rem;
   }
 }
@@ -40,7 +40,7 @@
     width: 0.9rem;
   }
 
-  @media only screen and (min-width: 600px) {
+  @media only screen and (min-width: $mobile-breakpoint) {
     font-size: 3rem;
     line-height: 4rem;
 
