--- a/assets/styles/_shared.scss
+++ b/assets/styles/_shared.scss
@@ -37,7 +37,7 @@
   margin-left: auto;
   margin-right: auto;
 
-  @media only screen and (min-width: 600px) {
+  @media only screen and (min-width: $mobile-breakpoint) {
     width: 100%;
     max-width: 1280px;
     padding-right: 4rem;
@@ -49,7 +49,7 @@
   font-weight: 500;
   font-size: 1rem;
 
-  @media only screen and (min-width: 600px) {
+  @media only screen and (min-width: $mobile-breakpoint) {
     font-size: 2rem;
     max-width: 850px;
   }
@@ -59,7 +59,7 @@
   font-size: 0.8rem;
   font-weight: 200;
 
-  @media only screen and (min-width: 600px) {
+  @media only screen and (min-width: $mobile-breakpoint) {
     font-size: 1.6rem;
   }
 }
