--- a/assets/styles/_shared.scss
+++ b/assets/styles/_shared.scss
@@ -76,6 +76,8 @@
 .work-link {
   font-size: 1.25rem;
   font-weight: 400;
+  text-decoration: none;
+  color: $black;
 
   img {
     width: 0.8rem;
