--- a/assets/styles/_sections.scss
+++ b/assets/styles/_sections.scss
@@ -17,11 +17,23 @@
 
 .services-section-description {
   font-size: 2rem;
-  margin: 2rem 0;
+  margin-top: 2rem;
+}
+
+.services-section-redirect-arrow-container {
+  @media only screen and (min-width: $mobile-breakpoint) {
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+  }
 }
 
 .services-section-redirect-arrow {
   width: 2rem;
+
+  @media only screen and (min-width: $mobile-breakpoint) {
+    width: 3rem;
+  }
 }
 
 .restaura-jeans-banner {
@@ -35,6 +47,11 @@
   font-weight: 400;
   margin: 0;
   line-height: 2rem;
+
+  a {
+    color: $black;
+    text-decoration: none;
+  }
 
   img {
     width: 0.9rem;
