--- a/assets/styles/_sections.scss
+++ b/assets/styles/_sections.scss
@@ -66,3 +66,34 @@
     }
   }
 }
+
+.contact-section-links {
+  list-style-type: none;
+  font-size: 1rem;
+  font-weight: 400;
+  padding: 0;
+
+  li {
+    margin-bottom: 0.75rem;
+
+    :last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  img {
+    width: 0.6rem;
+  }
+
+  a {
+    color: $black;
+    text-decoration: none;
+  }
+
+  @media only screen and (min-width: $mobile-breakpoint) {
+    font-size: 1.25rem;
+    img {
+      width: 0.8rem;
+    }
+  }
+}
