--- a/assets/styles/_shared.scss
+++ b/assets/styles/_shared.scss
@@ -23,6 +23,10 @@
     color: $primary-color;
     text-transform: uppercase;
   }
+
+  @media only screen and (min-width: $mobile-breakpoint) {
+    font-size: 1rem;
+  }
 }
 
 .background-banner {
