--- a/assets/styles/_shared.scss
+++ b/assets/styles/_shared.scss
@@ -93,3 +93,16 @@
     width: 100%;
   }
 }
+
+.text-highlight {
+  color: $primary-color;
+  font-style: italic;
+}
+
+.italic {
+  font-style: italic;
+}
+
+.font-w-500 {
+  font-weight: 500;
+}
