--- a/assets/index.css
+++ b/assets/index.css
@@ -324,6 +324,100 @@ header.background-banner .logo a {
   }
 }
 
+.experience-section {
+  margin-bottom: 2rem;
+}
+.experience-section h2 {
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+.experience-section .experience-section-item {
+  border-bottom: 2px solid #1f1f1f;
+  padding: 1.5rem 0 2rem;
+  display: -ms-grid;
+  display: grid;
+  gap: 1rem;
+}
+.experience-section .experience-section-item h3 {
+  font-size: 1rem;
+  font-weight: 500;
+}
+.experience-section .experience-section-item .experience-section-item-tags > span {
+  font-size: 0.75rem;
+  font-weight: 500;
+  border: 1.5px solid #1530ec;
+  border-radius: 2rem;
+  padding: 0.25rem 1.2rem;
+  margin-right: 0.8rem;
+}
+.experience-section .experience-section-item .experience-section-item-tags > span :last-child {
+  margin: 0;
+}
+.experience-section .experience-section-item .experience-section-item-details {
+  text-transform: uppercase;
+  font-size: 0.75rem;
+}
+.experience-section .experience-section-item .experience-section-item-description {
+  font-size: 0.9rem;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+@media only screen and (min-width: 600px) {
+  .experience-section .experience-section-item {
+        grid-template-areas: "title details" "tags description";
+  }
+  .experience-section .experience-section-item h3 {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    grid-area: title;
+  }
+  .experience-section .experience-section-item .experience-section-item-tags {
+    grid-area: tags;
+  }
+  .experience-section .experience-section-item .experience-section-item-details {
+    grid-area: details;
+  }
+  .experience-section .experience-section-item .experience-section-item-description {
+    -ms-grid-row: 5;
+    -ms-grid-column: 1;
+    grid-area: description;
+  }
+  @media only screen and (min-width: 600px) {
+  .experience-section .experience-section-item h3 {
+      -ms-grid-row: 1;
+      -ms-grid-column: 2;
+  }
+  .experience-section .experience-section-item > h3 {
+      -ms-grid-row: 1;
+      -ms-grid-column: 1;
+  }
+  .experience-section .experience-section-item .experience-section-item-tags {
+      -ms-grid-row: 2;
+      -ms-grid-column: 1;
+  }
+  .experience-section .experience-section-item .experience-section-item-details {
+      -ms-grid-row: 1;
+      -ms-grid-column: 2;
+  }
+  .experience-section .experience-section-item .experience-section-item-description {
+      -ms-grid-row: 2;
+      -ms-grid-column: 2;
+  }
+  .experience-section .experience-section-item > .experience-section-item-description {
+      -ms-grid-row: 2;
+      -ms-grid-column: 2;
+  }
+  }
+  .experience-section .experience-section-item > h1 {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+  }
+  .experience-section .experience-section-item > .about-me-description {
+    -ms-grid-row: 2;
+    -ms-grid-column: 2;
+  }
+}
+
 .responsive-grid-50-50 {
   display: -ms-grid;
   display: grid;
