--- a/assets/styles/_sections.scss
+++ b/assets/styles/_sections.scss
@@ -110,7 +110,7 @@
     border-bottom: 2px solid $separator;
     padding: 1.5rem 0 2rem;
     display: grid;
-    gap: 1rem;
+    gap: 0.75rem;
 
     h3 {
       font-size: 1rem;
@@ -118,6 +118,7 @@
     }
 
     .experience-section-item-tags {
+      margin: 0.75rem 0;
       > span {
         font-size: 0.75rem;
         font-weight: 500;
