--- a/assets/index.scss
+++ b/assets/index.scss
@@ -7,6 +7,7 @@
 @import "styles/shared";
 @import "styles/margin-padding";
 @import "styles/mobile-menu";
+@import "styles/contact";
 
 * {
   box-sizing: border-box;
