--- a/assets/styles/_mobile-menu.scss
+++ b/assets/styles/_mobile-menu.scss
@@ -29,6 +29,10 @@
     li {
       margin-bottom: 1rem;
 
+      a {
+        color: #333;
+      }
+
       :last-child {
         margin-bottom: 0;
       }
