--- a/assets/index.scss
+++ b/assets/index.scss
@@ -6,6 +6,7 @@
 @import "styles/grid";
 @import "styles/shared";
 @import "styles/margin-padding";
+@import "styles/font-weight";
 @import "styles/mobile-menu";
 @import "styles/contact";
 
